<resources>
    <string name="app_name">Pet_growth_journal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_picture">사진</string>
    <string name="text_category">카테고리</string>
    <string name="text_emotion">감정</string>
    <string name="text_take_picture">사진 촬영</string>
    <string name="text_choice_gallery">갤러리에서 선택</string>
    <string name="text_no_picture">사진 넣지 않기</string>

    <string name="text_today_grow_nav">오늘의 성장</string>
    <string name="text_total_nav">모아보기</string>
    <string name="text_no_record">오늘의 기록이 없어요.</string>
    <string name="text_title_today_grow">오늘의 성장</string>
    <string name="text_total_view">토탈 뷰</string>
    <string name="text_login_title">반려견의 성장을 기록해요</string>
    <string name="text_login_description">산책, 급여, 배변 등 반려견의 성장을 기록해요.</string>
    <string name="text_start_kakao">카카오로 시작하기</string>

    <string name="social_kakao_app_key">kakao42cb5a001e4aad8458c0b26f5e582da7</string>
    <string name="text_pet_name_description">반려견의 이름을\n알려주세요.</string>
    <string name="text_pet_more_description">반려견의 정보를\n조금 더 알려주세요.</string>
    <string name="text_pet_picture_description">마지막으로\n반려견의 사진을 골라주세요.</string>
    <string name="text_pet_name">반려견 이름</string>
    <string name="text_next">다음</string>
    <string name="text_start">시작하기</string>
    <string name="text_gender_male">남아</string>
    <string name="text_female">여아</string>

    <string name="text_pet_type">견종</string>
    <string name="text_pet_birth">생년월일</string>
    <string name="text_add_picture">사진 추가</string>
    <string name="text_save">기록 저장</string>


</resources>