<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <import type="android.view.View"/>
        <import type="androidx.lifecycle.LiveData" />
        
        
        <import type="com.example.pet_growth_journal.ui.onboarding.register.PetGender" />

        <variable
            name="viewModel"
            type="com.example.pet_growth_journal.ui.onboarding.register.RegisterViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_back"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cl_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:id="@+id/iv_first"
            android:background="@drawable/background_circle_purple"
            app:layout_constraintEnd_toStartOf="@+id/iv_second"
            android:layout_marginEnd="4dp"
            android:layout_marginVertical="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:id="@+id/iv_second"
            android:background="@drawable/background_circle_purple"
            app:layout_constraintEnd_toStartOf="@+id/iv_third"
            android:layout_marginEnd="4dp"
            android:layout_marginVertical="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:id="@+id/iv_third"
            android:background="@drawable/background_circle_gray"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="4dp"
            android:layout_marginVertical="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text.NotoSans.Bold"
        android:textSize="24sp"
        android:textColor="@color/black21"
        android:id="@+id/tv_title"
        android:text="@string/text_pet_more_description"
        app:layout_constraintStart_toStartOf="@+id/iv_back"
        app:layout_constraintTop_toBottomOf="@+id/iv_back"
        android:layout_marginTop="44dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="@{() -> viewModel.clickGender(PetGender.MALE)}"
        android:background="@{viewModel.genderType == PetGender.MALE ? @drawable/background_radius_8_blue21 : @drawable/background_radius_8_grayde}"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@+id/cl_female"
        android:id="@+id/cl_male">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_gender_male"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/iv_male"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.NotoSans.Bold"
            android:textSize="14sp"
            android:textColor="@color/black21"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/text_gender_male"
            app:layout_constraintTop_toBottomOf="@+id/iv_male"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/cl_male"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@{viewModel.genderType == PetGender.FEMALE ? @drawable/background_radius_8_blue21 : @drawable/background_radius_8_grayde}"
        android:onClick="@{() -> viewModel.clickGender(PetGender.FEMALE)}"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@+id/cl_male"
        android:id="@+id/cl_female">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_gender_female"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/iv_female"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.NotoSans.Bold"
            android:textSize="14sp"
            android:textColor="@color/black21"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/text_female"
            app:layout_constraintTop_toBottomOf="@+id/iv_female"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/background_radius_8_grayde"
        android:hint="@string/text_pet_type"
        android:textSize="16sp"
        style="@style/Text.NotoSans.Regular"
        android:textColor="@color/black21"
        app:layout_constraintTop_toBottomOf="@+id/cl_male"
        android:layout_marginTop="24dp"
        android:paddingVertical="17dp"
        android:paddingStart="16dp"
        android:id="@+id/et_type" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/background_radius_8_grayde"
        android:hint="@string/text_pet_birth"
        android:textSize="16sp"
        style="@style/Text.NotoSans.Regular"
        android:textColor="@color/black21"
        app:layout_constraintTop_toBottomOf="@+id/et_type"
        android:layout_marginTop="8dp"
        android:paddingVertical="17dp"
        android:paddingStart="16dp"
        android:id="@+id/et_birth" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:id="@+id/btn_next"
        android:background="@{viewModel.moreEnable ? @drawable/background_radius_8_purple6c_enable : @drawable/background_radius_8_purplec4_disable}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        style="@style/Text.NotoSans.Bold"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/text_next" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>