<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <import type="android.view.View"/>
        <import type="androidx.lifecycle.LiveData" />
        
        
        <import type="com.example.pet_growth_journal.ui.onboarding.register.PetGender" />

        <variable
            name="viewModel"
            type="com.example.pet_growth_journal.ui.onboarding.register.RegisterViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_back"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cl_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:id="@+id/iv_first"
            android:background="@drawable/background_circle_purple"
            app:layout_constraintEnd_toStartOf="@+id/iv_second"
            android:layout_marginEnd="4dp"
            android:layout_marginVertical="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:id="@+id/iv_second"
            android:background="@drawable/background_circle_purple"
            app:layout_constraintEnd_toStartOf="@+id/iv_third"
            android:layout_marginEnd="4dp"
            android:layout_marginVertical="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:id="@+id/iv_third"
            android:background="@drawable/background_circle_purple"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="4dp"
            android:layout_marginVertical="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text.NotoSans.Bold"
        android:textSize="24sp"
        android:textColor="@color/black21"
        android:id="@+id/tv_title"
        android:text="@string/text_pet_picture_description"
        app:layout_constraintStart_toStartOf="@+id/iv_back"
        app:layout_constraintTop_toBottomOf="@+id/iv_back"
        android:layout_marginTop="44dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:background="@drawable/background_radius_8_grayde"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/cl_image">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_image"
            android:background="@drawable/ic_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_image"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.NotoSans.Bold"
            android:textSize="14sp"
            android:id="@+id/tv_image"
            android:textColor="@color/black21"
            android:text="@string/text_add_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_image"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />



    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:id="@+id/btn_next"
        android:background="@{viewModel.pictureEnable ? @drawable/background_radius_8_purple6c_enable : @drawable/background_radius_8_purplec4_disable}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        style="@style/Text.NotoSans.Bold"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/text_start" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>